@@ -6,12 +6,12 @@ import at.fhv.Event.infrastructure.mapper.EquipmentMapper;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Repository
 public class EquipmentRepositoryJPAImpl implements EquipmentRepository {
-
     private final EquipmentJpaRepository jpa;
     private final EquipmentMapper mapper;
 
@@ -21,24 +21,60 @@ public class EquipmentRepositoryJPAImpl implements EquipmentRepository {
     }
 
     @Override
-    public Optional<Equipment> findById(Long id) {
-        return jpa.findById(id).map(mapper::toDomain);
+    public Optional<Equipment> findByNameIgnoreCase(String name) {
+        return jpa.findByNameIgnoreCase(name)
+                .map(mapper::toDomain);
     }
 
     @Override
-    public Optional<Equipment> findByNameIgnoreCase(String name) {
-        return jpa.findByNameIgnoreCase(name).map(mapper::toDomain);
+    public Optional<Equipment> findById(Long id) {
+        return jpa.findById(id)
+                .map(mapper::toDomain);
     }
 
     @Override
     public List<Equipment> findAll() {
-        return jpa.findAll().stream().map(mapper::toDomain).collect(Collectors.toList());
+        return jpa.findAll()
+                .stream()
+                .map(mapper::toDomain)
+                .toList();
     }
 
     @Override
-    public void save(Equipment equipment) {
-        var entity = mapper.toEntity(equipment);
-        var saved = jpa.save(entity);
+    public List<Equipment> findByRentableTrue() {
+        return jpa.findByRentableTrue()
+                .stream()
+                .map(mapper::toDomain)
+                .toList();
+    }
+
+    @Override
+    public Map<Long, Equipment> findByIds(List<Long> ids) {
+        return jpa.findAllById(ids)
+                .stream()
+                .map(mapper::toDomain)
+                .collect(Collectors.toMap(
+                        Equipment::getId,
+                        equipment -> equipment
+                ));
+    }
+
+    @Override
+    public Equipment save(Equipment equipment) {
+        EquipmentEntity entity = mapper.toEntity(equipment);
+        EquipmentEntity savedEntity = jpa.save(entity);
+        return mapper.toDomain(savedEntity);
+    }
+
+    @Override
+    public void updateStock(Long equipmentId, int newStock) {
+        EquipmentEntity entity = jpa.findById(equipmentId)
+                .orElseThrow(() -> new IllegalArgumentException(
+                        "Equipment not found: " + equipmentId
+                ));
+
+        entity.setStock(newStock);
+        jpa.save(entity);
     }
 
     @Override
@@ -46,7 +82,7 @@ public class EquipmentRepositoryJPAImpl implements EquipmentRepository {
         if (jpa.existsById(id)) {
             jpa.deleteById(id);
         } else {
-            throw new RuntimeException("Equipment not found: " + id);
+            throw new IllegalArgumentException("Equipment not found: " + id);
         }
     }
 }
